--- a/portfolio.html
+++ b/portfolio.html
@@ -28,9 +28,15 @@
                 </ul>
             </nav>
             <ul class="list header-cont">
-                <li class="cont-item"><a class="link header-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <li class="cont-item">
+                    <a class="link header-mail" href="mailto:info@devstudio.com"><svg class="cont-item-icon" width="16" height="12">
+                            <use href="./images/icons.svg#icon-icon-envelope"></use>
+                        </svg>info@devstudio.com</a>
                 </li>
-                <li class="cont-item"><a class="link header-tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                <li class="cont-item"><a class="link header-tel" href="tel:+380961111111"><svg class="cont-item-icon" width="10"
+                            height="16">
+                            <use href="./images/icons.svg#icon-icon-mobile"></use>
+                        </svg>+38 096 111 11 11</a></li>
             </ul>
         </div>
     </header>
