--- a/index.html
+++ b/index.html
@@ -109,31 +109,31 @@
                         <div class="team-item-info">
                         <h3 class="team-item-title">Игорь Демьяненко</h3>
                         <p lang="en" class="team-item-text">Product Designer</p>
-                        <ul class="list team-social-list">
-                            <li class="team-social-item">
-                                <a href="" class="team-social-link"  target="_blank" rel="noreferrer noopener">
-                                    <svg class="team-social-icon" width="20" height="20">
+                        <ul class="list social-list">
+                            <li class="social-item">
+                                <a href="" class="social-link"  target="_blank" rel="noreferrer noopener">
+                                    <svg class="social-icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="team-social-item">
-                                <a href="" class="team-social-link" target="_blank" rel="noreferrer noopener">
-                                    <svg class="team-social-icon" width="20" height="20">
+                            <li class="social-item">
+                                <a href="" class="social-link" target="_blank" rel="noreferrer noopener">
+                                    <svg class="social-icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-icon-twitter"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="team-social-item">
-                                <a href="" class="team-social-link" target="_blank" rel="noreferrer noopener">
-                                    <svg class="team-social-icon" width="20" height="20">
+                            <li class="social-item">
+                                <a href="" class="social-link" target="_blank" rel="noreferrer noopener">
+                                    <svg class="social-icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-icon-facebook"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="team-social-item">
-                                <a href="" class="team-social-link" target="_blank" rel="noreferrer noopener">
-                                    <svg class="team-social-icon" width="20" height="20">
+                            <li class="social-item">
+                                <a href="" class="social-link" target="_blank" rel="noreferrer noopener">
+                                    <svg class="social-icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-icon-linkedin"></use>
                                     </svg>
                                 </a>
@@ -146,31 +146,31 @@
                         <div class="team-item-info">
                         <h3 class="team-item-title">Ольга Репина</h3>
                         <p lang="en" class="team-item-text">Frontend Developer</p>
-                        <ul class="list team-social-list">
-                            <li class="team-social-item">
-                                <a href="" class="team-social-link" target="_blank" rel="noreferrer noopener">
-                                    <svg class="team-social-icon" width="20" height="20">
+                        <ul class="list social-list">
+                            <li class="social-item">
+                                <a href="" class="social-link" target="_blank" rel="noreferrer noopener">
+                                    <svg class="social-icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="team-social-item">
-                                <a href="" class="team-social-link" target="_blank" rel="noreferrer noopener">
-                                    <svg class="team-social-icon" width="20" height="20">
+                            <li class="social-item">
+                                <a href="" class="social-link" target="_blank" rel="noreferrer noopener">
+                                    <svg class="social-icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-icon-twitter"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="team-social-item">
-                                <a href="" class="team-social-link" target="_blank" rel="noreferrer noopener">
-                                    <svg class="team-social-icon" width="20" height="20">
+                            <li class="social-item">
+                                <a href="" class="social-link" target="_blank" rel="noreferrer noopener">
+                                    <svg class="social-icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-icon-facebook"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="team-social-item">
-                                <a href="" class="team-social-link" target="_blank" rel="noreferrer noopener">
-                                    <svg class="team-social-icon" width="20" height="20">
+                            <li class="social-item">
+                                <a href="" class="social-link" target="_blank" rel="noreferrer noopener">
+                                    <svg class="social-icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-icon-linkedin"></use>
                                     </svg>
                                 </a>
@@ -183,31 +183,31 @@
                         <div class="team-item-info">
                         <h3 class="team-item-title">Николай Тарасов</h3>
                         <p lang="en" class="team-item-text">Marketing</p>
-                        <ul class="list team-social-list">
-                            <li class="team-social-item">
-                                <a href="" class="team-social-link" target="_blank" rel="noreferrer noopener">
-                                    <svg class="team-social-icon" width="20" height="20">
+                        <ul class="list social-list">
+                            <li class="social-item">
+                                <a href="" class="social-link" target="_blank" rel="noreferrer noopener">
+                                    <svg class="social-icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="team-social-item">
-                                <a href="" class="team-social-link" target="_blank" rel="noreferrer noopener">
-                                    <svg class="team-social-icon" width="20" height="20">
+                            <li class="social-item">
+                                <a href="" class="social-link" target="_blank" rel="noreferrer noopener">
+                                    <svg class="social-icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-icon-twitter"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="team-social-item">
-                                <a href="" class="team-social-link" target="_blank" rel="noreferrer noopener">
-                                    <svg class="team-social-icon" width="20" height="20">
+                            <li class="social-item">
+                                <a href="" class="social-link" target="_blank" rel="noreferrer noopener">
+                                    <svg class="social-icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-icon-facebook"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="team-social-item">
-                                <a href="" class="team-social-link" target="_blank" rel="noreferrer noopener">
-                                    <svg class="team-social-icon" width="20" height="20">
+                            <li class="social-item">
+                                <a href="" class="social-link" target="_blank" rel="noreferrer noopener">
+                                    <svg class="social-icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-icon-linkedin"></use>
                                     </svg>
                                 </a>
@@ -220,31 +220,31 @@
                         <div class="team-item-info">
                         <h3 class="team-item-title">Михаил Ермаков</h3>
                         <p lang="en" class="team-item-text">UI Designer</p>
-                        <ul class="list team-social-list">
-                            <li class="team-social-item">
-                                <a href="" class="team-social-link" target="_blank" rel="noreferrer noopener">
-                                    <svg class="team-social-icon" width="20" height="20">
+                        <ul class="list social-list">
+                            <li class="social-item">
+                                <a href="" class="social-link" target="_blank" rel="noreferrer noopener">
+                                    <svg class="social-icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="team-social-item">
-                                <a href="" class="team-social-link" target="_blank" rel="noreferrer noopener">
-                                    <svg class="team-social-icon" width="20" height="20">
+                            <li class="social-item">
+                                <a href="" class="social-link" target="_blank" rel="noreferrer noopener">
+                                    <svg class="social-icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-icon-twitter"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="team-social-item">
-                                <a href="" class="team-social-link" target="_blank" rel="noreferrer noopener">
-                                    <svg class="team-social-icon" width="20" height="20">
+                            <li class="social-item">
+                                <a href="" class="social-link" target="_blank" rel="noreferrer noopener">
+                                    <svg class="social-icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-icon-facebook"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="team-social-item">
-                                <a href="" class="team-social-link" target="_blank" rel="noreferrer noopener">
-                                    <svg class="team-social-icon" width="20" height="20">
+                            <li class="social-item">
+                                <a href="" class="social-link" target="_blank" rel="noreferrer noopener">
+                                    <svg class="social-icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-icon-linkedin"></use>
                                     </svg>
                                 </a>
@@ -309,7 +309,7 @@
     <!-- Footer section -->
     <footer class="footer">
         <div class="container footer-container">
-            <div class="first-column">
+            <div class="footer-container-item">
                 <a class="link logo"   href="index.html">Web<span class="secondary-logo">Studio</span></a>
                 <address>
                     <ul class="list footer-list">
@@ -319,38 +319,38 @@
                     </ul>
                 </address>
             </div>
-            <div class="second-column">
+            <div class="footer-container-item">
                 <h3 class="second-column-title">Присоединяйтесь</h3>
-                <ul class="list footer-social-list">
-                    <li class="footer-social-item">
-                        <a href="" class="footer-social-link" target="_blank" rel="noreferrer noopener">
-                            <svg class="footer-social-icon" width="20" height="20">
-                                <use href="./images/icons.svg#icon-icon-instagram"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="footer-social-item">
-                        <a href="" class="footer-social-link" target="_blank" rel="noreferrer noopener">
-                            <svg class="footer-social-icon" width="20" height="20">
-                                <use href="./images/icons.svg#icon-icon-twitter"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="footer-social-item">
-                        <a href="" class="footer-social-link" target="_blank" rel="noreferrer noopener">
-                            <svg class="footer-social-icon" width="20" height="20">
-                                <use href="./images/icons.svg#icon-icon-facebook"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="footer-social-item">
-                        <a href="" class="footer-social-link" target="_blank" rel="noreferrer noopener">
-                            <svg class="footer-social-icon" width="20" height="20">
-                                <use href="./images/icons.svg#icon-icon-linkedin"></use>
-                            </svg>
-                        </a>
-                    </li>
-                </ul>
+                        <ul class="list social-list">
+                            <li class="social-item">
+                                <a href="" class="social-link" target="_blank" rel="noreferrer noopener">
+                                    <svg class="social-icon" width="20" height="20">
+                                        <use href="./images/icons.svg#icon-icon-instagram"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="social-item">
+                                <a href="" class="social-link" target="_blank" rel="noreferrer noopener">
+                                    <svg class="social-icon" width="20" height="20">
+                                        <use href="./images/icons.svg#icon-icon-twitter"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="social-item">
+                                <a href="" class="social-link" target="_blank" rel="noreferrer noopener">
+                                    <svg class="social-icon" width="20" height="20">
+                                        <use href="./images/icons.svg#icon-icon-facebook"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="social-item">
+                                <a href="" class="social-link" target="_blank" rel="noreferrer noopener">
+                                    <svg class="social-icon" width="20" height="20">
+                                        <use href="./images/icons.svg#icon-icon-linkedin"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
             </div>
         </div>
     </footer>
