--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,7 @@
                 </ul>
                 <ul class="list portfolio-list">
                     <li class="portfolio-item">
-                        <a href="" class="link" target="_blank" rel="noreferrer noopener">
+                        <a href="" class="link portfolio-item-link" target="_blank" rel="noreferrer noopener">
                             <img src="./images/portfolio-1.jpg" alt="Фото компьютера с открытым сайтом" width="370" height="294">
                             <div class="portfolio-item-info">
                                 <h2 class="portfolio-title">Технокряк</h2>
@@ -65,7 +65,7 @@
 
                     </li>
                     <li class="portfolio-item">
-                        <a href="" class="link" target="_blank" rel="noreferrer noopener">
+                        <a href="" class="link portfolio-item-link" target="_blank" rel="noreferrer noopener">
                             <img src="./images/portfolio-2.jpg" alt="Два баскетболиста с мячом" width="370" height="294">
                             <div class="portfolio-item-info">
                                 <h2 class="portfolio-title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
@@ -74,7 +74,7 @@
                         </a>
                     </li>
                     <li class="portfolio-item">
-                        <a href="" class="link" target="_blank" rel="noreferrer noopener">
+                        <a href="" class="link portfolio-item-link" target="_blank" rel="noreferrer noopener">
                             <img src="./images/portfolio-3.jpg" alt="Логотип ресторана Seafood" width="370" height="294">
                             <div class="portfolio-item-info">
                                 <h2 class="portfolio-title">Ресторан <span lang="en">Seafood</span></h2>
@@ -83,7 +83,7 @@
                         </a>
                     </li>
                     <li class="portfolio-item">
-                        <a href="" class="link" target="_blank" rel="noreferrer noopener">
+                        <a href="" class="link portfolio-item-link" target="_blank" rel="noreferrer noopener">
                             <img src="./images/portfolio-4.jpg" alt="Черные блютуз наушники" width="370" height="294">
                             <div class="portfolio-item-info">
                                 <h2 class="portfolio-title">Проект <span lang="en">Prime</span></h2>
@@ -92,7 +92,7 @@
                         </a>
                     </li>
                     <li class="portfolio-item">
-                        <a href="" class="link" target="_blank" rel="noreferrer noopener">
+                        <a href="" class="link portfolio-item-link" target="_blank" rel="noreferrer noopener">
                             <img src="./images/portfolio-5.jpg" alt="Белая и крафтовая коробки" width="370" height="294">
                             <div class="portfolio-item-info">
                                 <h2 class="portfolio-title">Проект <span lang="en">Boxes</span></h2>
@@ -101,7 +101,7 @@
                         </a>
                     </li>
                     <li class="portfolio-item">
-                        <a href="" class="link" target="_blank" rel="noreferrer noopener">
+                        <a href="" class="link portfolio-item-link" target="_blank" rel="noreferrer noopener">
                             <img src="./images/portfolio-6.jpg" alt="Монитор с главной страницей сайта" width="370" height="294">
                             <div class="portfolio-item-info">
                                 <h2 lang="en" class="portfolio-title">Inspiration has no Borders</h2>
@@ -110,7 +110,7 @@
                         </a>
                     </li>
                     <li class="portfolio-item">
-                        <a href="" class="link" target="_blank" rel="noreferrer noopener">
+                        <a href="" class="link portfolio-item-link" target="_blank" rel="noreferrer noopener">
                             <img src="./images/portfolio-7.jpg" alt="Пример дизайна страниц журнала" width="370" height="294">
                             <div class="portfolio-item-info">
                                 <h2 class="portfolio-title">Издание <span lang="en">Limited Edition</span></h2>
@@ -119,7 +119,7 @@
                         </a>
                     </li>
                     <li class="portfolio-item">
-                        <a href="" class="link" target="_blank" rel="noreferrer noopener">
+                        <a href="" class="link portfolio-item-link" target="_blank" rel="noreferrer noopener">
                             <img src="./images/portfolio-8.jpg" alt="Логотип компании на ярлычке" width="370" height="294">
                             <div class="portfolio-item-info">
                                 <h2 class="portfolio-title">Проект <span lang="en">LAB</span></h2>
@@ -128,7 +128,7 @@
                         </a>
                     </li>
                     <li class="portfolio-item">
-                        <a href="" class="link" target="_blank" rel="noreferrer noopener">
+                        <a href="" class="link portfolio-item-link" target="_blank" rel="noreferrer noopener">
                             <img src="./images/portfolio-9.jpg" alt="Человек работает за ноутбуком" width="370" height="294">
                             <div class="portfolio-item-info">
                                 <h2 lang="en" class="portfolio-title">Growing Business</h2>
@@ -143,7 +143,7 @@
     <!-- Подвал сайта -->
     <footer class="footer">
         <div class="container footer-container">
-            <div class="first-column">
+            <div class="footer-container-item">
                 <a class="link logo" href="index.html">Web<span class="secondary-logo">Studio</span></a>
                 <address>
                     <ul class="list footer-list">
@@ -156,33 +156,33 @@
                     </ul>
                 </address>
             </div>
-            <div class="second-column">
+            <div class="footer-container-item">
                 <h3 class="second-column-title">Присоединяйтесь</h3>
-                <ul class="list footer-social-list">
-                    <li class="footer-social-item">
-                        <a href="" class="footer-social-link" target="_blank" rel="noreferrer noopener">
-                            <svg class="footer-social-icon" width="20" height="20">
+                <ul class="list social-list">
+                    <li class="social-item">
+                        <a href="" class="social-link" target="_blank" rel="noreferrer noopener">
+                            <svg class="social-icon" width="20" height="20">
                                 <use href="./images/icons.svg#icon-icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="footer-social-item">
-                        <a href="" class="footer-social-link" target="_blank" rel="noreferrer noopener">
-                            <svg class="footer-social-icon" width="20" height="20">
+                    <li class="social-item">
+                        <a href="" class="social-link" target="_blank" rel="noreferrer noopener">
+                            <svg class="social-icon" width="20" height="20">
                                 <use href="./images/icons.svg#icon-icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="footer-social-item">
-                        <a href="" class="footer-social-link" target="_blank" rel="noreferrer noopener">
-                            <svg class="footer-social-icon" width="20" height="20">
+                    <li class="social-item">
+                        <a href="" class="social-link" target="_blank" rel="noreferrer noopener">
+                            <svg class="social-icon" width="20" height="20">
                                 <use href="./images/icons.svg#icon-icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="footer-social-item">
-                        <a href="" class="footer-social-link" target="_blank" rel="noreferrer noopener">
-                            <svg class="footer-social-icon" width="20" height="20">
+                    <li class="social-item">
+                        <a href="" class="social-link" target="_blank" rel="noreferrer noopener">
+                            <svg class="social-icon" width="20" height="20">
                                 <use href="./images/icons.svg#icon-icon-linkedin"></use>
                             </svg>
                         </a>
